Add: Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 markdown: kramdown
 highlighter: pygments
 destination: _httpdocs
+url: tmpworldwide.github.io
 sass:
     style: :compressed
 exclude: [
