--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ markdown: kramdown
 highlighter: rouge
 destination: _httpdocs
 url: tmpworldwide.github.io
+repo: https://github.com/tmpworldwide/tmpworldwide.github.io/
+ghpage: https://tmpworldwide.github.io/
 sass:
     style: :compressed
 exclude: [
