--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Standard TMP editor configuration
+# Standard Radancy editor configuration
 # Learn more at http://editorconfig.org
 
 root = true
