--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ exclude: [
   CNAME
 ]
 destination: _httpdocs
-git-name: Web Standards
 git-url: https://tmpworldwide.dev
 highlighter: rouge
 lang: en-US
 markdown: kramdown
+name: Web Standards
 owner-name: Michael Spellacy
 owner-email: michael.spellacy@radancy.com
 owner-image: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
