--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ highlighter: rouge
 lang: en-US
 markdown: kramdown
 name: Web Standards
+nickname: RadDev
 owner-name: Michael Spellacy
 owner-email: michael.spellacy@radancy.com
 owner-image: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
