--- a/a11y/extension/manifest.json
+++ b/a11y/extension/manifest.json
@@ -1,21 +1,21 @@
 {
  "manifest_version": 2,
- "name": "Accessibility Checklist",
+ "name": "A11y Smoke Test",
  "version": "1.0.0",
- "description": "This is a sample description",
+ "description": "A tool to help developers and QA engineers quickly find and fix baseline accessibility issues.",
  "permissions": [
    "activeTab",
    "declarativeContent"
  ],
  "content_scripts": [
    {
-     "matches": ["<all_urls>"],
+      "matches": ["<all_urls>"],
      "js": ["init.js"]
    }
  ],
  "content_security_policy": "script-src 'self' https://ajax.googleapis.com https://radancy.dev; object-src 'self'",
  "browser_action": {
-   "default_title": "Does a thing when you do a thing",
-   "default_popup": "init.html"
+   "default_title": "A11y Smoke Test",
+   "default_popup": "index.html"
  }
 }
