--- a/a11y/extension/manifest.json
+++ b/a11y/extension/manifest.json
@@ -28,8 +28,7 @@
   "name": "A11y Smoke Test",
   "permissions": [
 
-    "activeTab",
-    "storage"
+    "activeTab"
 
   ],
   "version": "1.0.0"
