--- a/a11y/extension/manifest.json
+++ b/a11y/extension/manifest.json
@@ -1,36 +1,27 @@
 {
-
   "browser_action": {
     "browser_style": true,
     "default_icon": {
-
       "16": "img/icon-16.png",
       "32": "img/icon-32.png"
-
     },
-
     "default_popup": "index.html",
     "default_title": "Radancy: Accessibility Smoke Test"
-
   },
-
   "content_scripts": [{
-
     "css": ["init.css"],
     "js": ["init.js"],
     "matches": ["<all_urls>"]
-
   }],
-
   "content_security_policy": "script-src 'self' https://ajax.googleapis.com https://radancy.dev; object-src 'self'",
   "description": "A tool to help developers and QA engineers quickly find and fix baseline accessibility issues.",
   "manifest_version": 2,
   "name": "A11y Smoke Test",
   "permissions": [
-
-    "activeTab"
-
+    "tabs",
+    "storage",
+    "clipboardWrite",
+    "contextMenus"
   ],
   "version": "1.0.0"
-
 }
