--- a/a11y/extension/manifest.json
+++ b/a11y/extension/manifest.json
@@ -13,8 +13,7 @@
   "manifest_version": 2,
   "name": "A11y Smoke Test",
   "permissions": [
-    "activeTab",
-    "storage"
+    "activeTab"
   ],
-  "version": "1.0.0.0"
+  "version": "1.0.1"
 }
